# ai-dialogue-creator

./: Makefile  README.md  pyproject.toml
data/: output.md
src/: main.py
src/agents/dialogue_creator/: dialogue_creator_agent.py  tts_utils.py
